# cdseutils

./: .gitignore  README.md  __init__.py  constants.py  mydataclasses.py  pyproject.toml  requirements.txt  sentinel2.py  utils.py
cdseutils/: __init__.py  constants.py  evalscripts.py  sentinel2.py  utils.py
notebooks/: test.ipynb
tests/: test.py
