[project]
name = "cdseutils"
version = "0.1.0"
description = "Utility functions to download satellite data from CDSE."
authors = [{ name = "Nikhil Sasi Rajan", email = "nikhilsasirajan@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "sentinelhub",
    "boto3",
    "geopandas",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
